# Motor-de-busca-e-Detetor-de-Plagio

./: CMakeLists.txt  LICENSE  document_loader.c  document_loader.h  frequencia.c  frequencia.h  hash.c  hash.h  main.c  plagio.c  plagio.h  tokenizer.c  tokenizer.h  trie.c  trie.h
docs/: doc1.txt  doc2.txt  doc3.txt  trabalho1_ia_educacao.txt  trabalho2_ia_educacao_copia.txt  trabalho3_ia_educacao_parafraseado.txt  trabalho4_mudancas_climaticas.txt  trabalho5_brasil_colonial.txt
